fix: disable side toc on mobile devices

--- a/assets/scss/layout/_single.scss
+++ b/assets/scss/layout/_single.scss
@@ -115,6 +115,12 @@ ol, ul {
     }
 }
 
+@media only screen and (max-device-width: 1024px) {
+    .side-toc {
+        display: none;
+    }
+}
+
 .side-toc {
     box-sizing: border-box;
     position: fixed;
